fix user handle wrap

--- a/src/components/status/status.scss
+++ b/src/components/status/status.scss
@@ -92,8 +92,10 @@
 
     a {
       display: inline-block;
-      overflow-wrap: break-word;
-      text-wrap: pretty;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow-x: hidden;
+      width: 100%
     }
   }
 
@@ -101,6 +103,7 @@
     min-width: 1.6em;
     margin-right: 0.4em;
     white-space: nowrap;
+    overflow-wrap: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     flex: 1 1 0;
